--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="https://pabloespinal.github.io/coursera-test/site/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
