--- a/site/index.html
+++ b/site/index.html
@@ -17,10 +17,11 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <h1>Testing one</h1>
-        <h1>Testing one</h1>
-        <h1>Testing one</h1>
-        <h1>Testing one</h1>
+        <div>
+            <div id='main_title'>
+                <h1>Our Menu</h1>
+            </div>
+        </div>
         
         <script src="" async defer></script>
     </body>
