--- a/site/index.html
+++ b/site/index.html
@@ -17,33 +17,29 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-		<h1>Our Menu</h1>
-			<div class="row">
-				<div class="section-1 col-lg-3 col-md-3 col-sm-3">
-					<div class="heading-1">
-						Chicken
-					</div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie augue id neque tempor finibus. Quisque neque turpis, pellentesque ac imperdiet eget, eleifend id dui. Cras feugiat ultrices sem nec pharetra. Mauris eget augue ac libero vehicula pulvinar. Aliquam at vehicula ex.
-					</p>
-				</div>
-				<div class="section-2 col-lg-3 col-md-3 col-sm-3">
-					<div class="heading-2">
-						Beef
-					</div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie augue id neque tempor finibus. Quisque neque turpis, pellentesque ac imperdiet eget, eleifend id dui. Cras feugiat ultrices sem nec pharetra. Mauris eget augue ac libero vehicula pulvinar. Aliquam at vehicula ex.
-					</p>
-				</div>
-				<div class="section-3 col-lg-3 col-md-3 col-sm-3">
-					<div class="heading-3">
-						Sushi
-					</div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie augue id neque tempor finibus. Quisque neque turpis, pellentesque ac imperdiet eget, eleifend id dui. Cras feugiat ultrices sem nec pharetra. Mauris eget augue ac libero vehicula pulvinar. Aliquam at vehicula ex.
-					</p>
-				</div>
-			</div> 
+	  <h1>Our Menu</h1>
+	  <div class="container">
+	    <div id="box1" class="box">
+	      <div class="label">
+		<h3 id="label1">Chicken</h3>
+	      </div>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	      </p>
+	    </div><div id="box2" class="box">
+	      <div class="label">
+		<h3 id="label2">Beef</h3>
+	      </div>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	      </p>
+	    </div><div id="box3" class="box">
+	      <div class="label">
+		<h3 id="label3">Sushi</h3>
+	      </div>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	      </p>
+	    </div>
+
+	  </div>
         
         <script src="" async defer></script>
     </body>
