--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,10 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-	  <h1>Our Menu</h1>
+		
+	  <div class="main-title">
+	  	<h1>Our Menu</h1>
+	  </div>
 	  <div class="container">
 	    <div id="box1" class="box">
 	      <div class="label">
