--- a/site/index.html
+++ b/site/index.html
@@ -23,19 +23,19 @@
 	  <div class="container">
 	    <div id="box1" class="box">
 	      <div class="label">
-		<h3 id="label1">Chicken</h3>
+		<h3 id="title-1">Chicken</h3>
 	      </div>
 	      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
 	      </p>
 	    </div><div id="box2" class="box">
 	      <div class="label">
-		<h3 id="label2">Beef</h3>
+		<h3 id="title-2">Beef</h3>
 	      </div>
 	      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
 	      </p>
 	    </div><div id="box3" class="box">
 	      <div class="label">
-		<h3 id="label3">Sushi</h3>
+		<h3 id="title-3">Sushi</h3>
 	      </div>
 	      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
 	      </p>
